2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.cc (save_iochannel): Use Gtk::TextBuffer::get_slice()
	rather than get_text().

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (substitute_references): Reduce usage of
	Glib::ustring::raw() in favor of native ustring accessor methods.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (substitute_references): Change return
	type and parameter types to Glib::ustring.  I have no idea as to
	why the interface used std::string in the first place...

	* src/filebuffer.cc (FileBuffer::get_line_preview): Adapt to the
	changed parameter types of Util::substitute_references().
	(FileBuffer::replace_match): ditto.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::find_matches): Remove bogus
	comment.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::undo_remove_match): Avoid
	decrementing current_match_ since it might point to the start
	of the range.  Also remove the call to remove_tag_current()
	because it does nothing if match_removed_ is set anyway.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (menuitem_undo): Add accelerator key CTRL-z.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.h: Eliminate the include dependency on the pcre.h
	header.  This requires defining the numeric values of the bit flag
	enums directly, but fortunately these cannot be changed without
	breaking ABI anyway.

	* src/pcreshell.cc: Include pcre.h, and use static_cast<> where
	necessary to allow for Pattern::pcre_ to be declared as void*.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::set_title_filename): Concatenate
	with the string literal PACKAGE_NAME at compile time.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_add_file): New method.